--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,19 @@ body {
         filter: drop-shadow(10px 30px 15px #3030307a);
     }
     .primary-btn {
-        @apply border border-white px-4 py-2 rounded-lg
+        @apply bg-primary w-full text-white px-4 py-2 rounded-md hover:bg-secondary
+        duration-300;
+    }
+    .secondary-btn {
+        @apply border border-white px-4 py-2 rounded-lg;
     }
     .large-text {
         @apply text-center text-[80px] sm:text-[120px] md:text-[150px]
         xl:text-[180px] text-white uppercase font-bold absolute bottom-0
         w-full z-0 text-shadow;
+    }
+    .input-style {
+        @apply px-4 py-2 border-[1px] border-gray-400 rounded-md outline-none;
     }
 }
 
